--- a/css/styles.css
+++ b/css/styles.css
@@ -230,10 +230,16 @@ body {
 }
 
 .hero {
+  background-image: url();
+  max-width: 1600px;
+  height: 600px;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
 }
+
 .hero-title {
   text-align: center;
   width: 696px;
@@ -241,6 +247,7 @@ body {
   margin-right: auto;
   margin-bottom: 30px;
 }
+
 /* ====== Section Hero ========== */
 
 /* ======== Section about ======== */
@@ -321,6 +328,12 @@ body {
 /* ======== Section about ======== */
 
 /* ======== Section team ========= */
+
+.team-item {
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
 
 .team {
   background: #f5f4fa;
