--- a/css/styles.css
+++ b/css/styles.css
@@ -192,7 +192,12 @@ body {
 /* ====== Section Hero ========== */
 
 .hero {
-  background-color: var(--background-dark-grey);
+  background-color: #c4c4c4;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/header.jpeg);
 }
 .hero-title {
   margin-top: 0;
@@ -508,7 +513,6 @@ footer {
 }
 
 .img-portfolio {
-  text-align: center;
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -524,9 +528,10 @@ footer {
 
 .list-but {
   margin-bottom: 50px;
-  display: inline-flex;
+  display: flex;
   align-items: center;
   column-gap: 8px;
+  justify-content: center;
 }
 
 .img-list {
@@ -537,6 +542,7 @@ footer {
 
 .textbild {
   padding: 20px 24px;
+  border: 1px solid #eeeeee;
 }
 
 .img-border {
@@ -671,6 +677,7 @@ footer {
 
 /* наши возможности */
 .site {
+  margin-bottom: 4px;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 700;
